WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309236
Invalidate ShapedTextCache when pruning system font fallback data
https://bugs.webkit.org/show_bug.cgi?id=309236
Summary
Invalidate ShapedTextCache when pruning system font fallback data
Vitor Roriz
Reported
2026-03-05 00:21:55 PST
Invalidate ShapedTextCache when pruning system font fallback data
Attachments
Add attachment
proposed patch, testcase, etc.
Vitor Roriz
Comment 1
2026-03-05 00:21:57 PST
<
rdar://problem/171598334
>
Vitor Roriz
Comment 2
2026-03-05 00:29:14 PST
Pull request:
https://github.com/apple/WebKit/pull/4617
Vitor Roriz
Comment 3
2026-03-05 07:47:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59982
EWS
Comment 4
2026-03-05 11:11:25 PST
Committed
308731@main
(d19c41623ff6): <
https://commits.webkit.org/308731@main
> Reviewed commits have been landed. Closing PR #59982 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug