Invalidate ShapedTextCache  when pruning system font fallback data https://bugs.webkit.org/show_bug.cgi?id=309236 rdar://171598334

Reviewed by Simon Fraser.

ShapedTextCache needs to be cleared out when we are
clearing system font fallback as we might be pointing
at it.

This is a hot path that still hasn't adopt smart pointers.
We should evaluate it next.

* Source/WebCore/platform/graphics/FontCascadeFonts.cpp:
(WebCore::FontCascadeFonts::pruneSystemFallbacks):

Canonical link: https://commits.webkit.org/308731@main